todos/manifests/back/httproute-back.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todos-back
  namespace: back-app
spec:
  hostnames:
    - todos.polipixel.link
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: todos-back
          port: 8080
